--- a/views/styles/components/_popup.scss
+++ b/views/styles/components/_popup.scss
@@ -10,13 +10,17 @@ $arrow-button-bg: var(--arrow-button-color);
     color: $popup-text;
 
     display: flex;
-    justify-content: center;
     align-items: center;
-
+    justify-content: center;
+    padding: 1rem 0;
 
     visibility: hidden;
     display: none;
     z-index: 999;
+
+    @media screen and (max-width: 768px) {
+        justify-content: flex-start;
+    }
 
     #next-day-btn,
     #prev-day-btn {
